added dream area

--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ h1 {
 section {
     display:flex;
     align-items: center;
+    margin-bottom: 90px;
 }
 .top-banner {
     background-image:url(images/top-banner.png);
@@ -40,4 +41,12 @@ a.link-button {
     font-size: 18px;
     font-weight: 600;
     border-radius: 8px;
+}
+.dream-big {
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+}
+.padding-right {
+    padding-right: 100px;
 }
